--- a/PlanetWallet/Views/2_PinCode/Cells/PinView.xib
+++ b/PlanetWallet/Views/2_PinCode/Cells/PinView.xib
@@ -62,6 +62,9 @@
                                         <userDefinedRuntimeAttribute type="color" keyPath="themeBackgroundColor">
                                             <color key="value" red="0.73725490196078436" green="0.74117647058823533" blue="0.83529411764705885" alpha="1" colorSpace="calibratedRGB"/>
                                         </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="2"/>
+                                        </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </view>
                             </subviews>
@@ -103,6 +106,9 @@
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="color" keyPath="themeBackgroundColor">
                                             <color key="value" red="0.73725490196078436" green="0.74117647058823533" blue="0.83529411764705885" alpha="1" colorSpace="calibratedRGB"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="2"/>
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </view>
@@ -146,6 +152,9 @@
                                         <userDefinedRuntimeAttribute type="color" keyPath="themeBackgroundColor">
                                             <color key="value" red="0.73725490196078436" green="0.74117647058823533" blue="0.83529411764705885" alpha="1" colorSpace="calibratedRGB"/>
                                         </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="2"/>
+                                        </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </view>
                             </subviews>
@@ -188,6 +197,9 @@
                                         <userDefinedRuntimeAttribute type="color" keyPath="themeBackgroundColor">
                                             <color key="value" red="0.73725490196078436" green="0.74117647058823533" blue="0.83529411764705885" alpha="1" colorSpace="calibratedRGB"/>
                                         </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="2"/>
+                                        </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </view>
                             </subviews>
@@ -214,24 +226,30 @@
                                         <userDefinedRuntimeAttribute type="color" keyPath="themeBackgroundColor">
                                             <color key="value" red="0.73725490196078436" green="0.74117647058823533" blue="0.83529411764705885" alpha="1" colorSpace="calibratedRGB"/>
                                         </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="2"/>
+                                        </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lCG-es-9ro" customClass="PWView" customModule="PlanetWallet" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="5" width="15" height="2"/>
+                                    <rect key="frame" x="1.5" y="5" width="12" height="2"/>
                                     <color key="backgroundColor" red="0.36078431372549019" green="0.34901960784313724" blue="0.39215686274509803" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
+                                        <constraint firstAttribute="width" constant="12" id="EG1-D8-zd2"/>
                                         <constraint firstAttribute="height" constant="2" id="o59-1b-OX0"/>
                                     </constraints>
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="color" keyPath="themeBackgroundColor">
                                             <color key="value" red="0.73725490196078436" green="0.74117647058823533" blue="0.83529411764705885" alpha="1" colorSpace="calibratedRGB"/>
                                         </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="2"/>
+                                        </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </view>
                             </subviews>
                             <constraints>
-                                <constraint firstItem="lCG-es-9ro" firstAttribute="leading" secondItem="lsJ-1Y-cOY" secondAttribute="leading" id="B9Z-uA-hnl"/>
-                                <constraint firstAttribute="trailing" secondItem="lCG-es-9ro" secondAttribute="trailing" id="Fr9-xh-Aq7"/>
+                                <constraint firstItem="lCG-es-9ro" firstAttribute="centerX" secondItem="lsJ-1Y-cOY" secondAttribute="centerX" id="AGQ-2A-yRZ"/>
                                 <constraint firstItem="XKH-xH-GSj" firstAttribute="top" secondItem="lsJ-1Y-cOY" secondAttribute="top" id="G8U-mu-IzX"/>
                                 <constraint firstItem="XKH-xH-GSj" firstAttribute="centerX" secondItem="lsJ-1Y-cOY" secondAttribute="centerX" id="adH-Y0-QBF"/>
                                 <constraint firstItem="lCG-es-9ro" firstAttribute="centerY" secondItem="lsJ-1Y-cOY" secondAttribute="centerY" id="rvg-z0-rlj"/>
@@ -271,6 +289,9 @@
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="color" keyPath="themeBackgroundColor">
                                             <color key="value" red="0.73725490196078436" green="0.74117647058823533" blue="0.83529411764705885" alpha="1" colorSpace="calibratedRGB"/>
+                                        </userDefinedRuntimeAttribute>
+                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                            <real key="value" value="2"/>
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                 </view>
