--- a/PlanetWallet/Views/4_Main/Popups/BottomMenuView.xib
+++ b/PlanetWallet/Views/4_Main/Popups/BottomMenuView.xib
@@ -23,6 +23,7 @@
             <connections>
                 <outlet property="addressLb" destination="eWq-yd-qWQ" id="ZdS-dg-ogK"/>
                 <outlet property="containerView" destination="iN0-l3-epB" id="K86-P6-J2M"/>
+                <outlet property="copyTopConstraint" destination="RBD-DB-zGp" id="qKr-Tu-6FN"/>
                 <outlet property="planetNameLb" destination="GEP-Ga-2w6" id="ue1-oc-gnU"/>
                 <outlet property="planetView" destination="DIY-Nd-ckh" id="c3D-2L-0ML"/>
                 <outlet property="qrCodeImgView" destination="dH5-t7-0zN" id="ekX-XD-FGx"/>
@@ -118,7 +119,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rFL-SS-FXo" customClass="PWButton" customModule="PlanetWallet" customModuleProvider="target">
-                    <rect key="frame" x="20" y="365" width="162.5" height="55"/>
+                    <rect key="frame" x="20" y="382" width="162.5" height="55"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="55" id="mAm-Ao-fGc"/>
@@ -150,7 +151,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aH8-wJ-w2O" customClass="PWButton" customModule="PlanetWallet" customModuleProvider="target">
-                    <rect key="frame" x="192.5" y="365" width="162.5" height="55"/>
+                    <rect key="frame" x="192.5" y="382" width="162.5" height="55"/>
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="55" id="nnb-1v-q0e"/>
@@ -207,8 +208,8 @@
                 <constraint firstItem="aH8-wJ-w2O" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="centerX" constant="5" id="IQa-Z9-gzG"/>
                 <constraint firstItem="Uqq-e7-WuN" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="NzX-fR-6A1"/>
                 <constraint firstItem="aH8-wJ-w2O" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="192" id="Q6D-1b-0dt"/>
-                <constraint firstItem="rFL-SS-FXo" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="365" id="RBD-DB-zGp"/>
-                <constraint firstItem="aH8-wJ-w2O" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="365" id="Vjj-0V-nWE"/>
+                <constraint firstItem="rFL-SS-FXo" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="382" id="RBD-DB-zGp"/>
+                <constraint firstItem="aH8-wJ-w2O" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="382" id="Vjj-0V-nWE"/>
                 <constraint firstItem="4f0-iG-Q2C" firstAttribute="top" secondItem="Uqq-e7-WuN" secondAttribute="bottom" constant="40" id="cgk-xn-izv"/>
                 <constraint firstItem="GEP-Ga-2w6" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="eHb-fj-YdE"/>
                 <constraint firstItem="GEP-Ga-2w6" firstAttribute="top" secondItem="4f0-iG-Q2C" secondAttribute="bottom" constant="40" id="ery-rB-k3A"/>
